# Robotica

./: README.md  instructiuni.txt
devel/: .catkin  local_setup.fish  setup.fish
devel/.private/MyPackage/: local_setup.sh
devel/.private/MyPackage/include/MyPackage/: CustomServMess.h  CustomServMessRequest.h  CustomServMessResponse.h
devel/.private/MyPackage/lib/pkgconfig/: MyPackage.pc
devel/.private/MyPackage/share/MyPackage/cmake/: MyPackage-msg-extras.cmake  MyPackage-msg-paths.cmake  MyPackageConfig.cmake
devel/.private/catkin_tools_prebuild/: local_setup.fish
devel/.private/catkin_tools_prebuild/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
devel/.private/topics_pkg/: .catkin  local_setup.sh  setup.sh
devel/.private/topics_pkg/lib/pkgconfig/: topics_pkg.pc
devel/.private/topics_pkg/share/topics_pkg/cmake/: topics_pkgConfig.cmake
devel/include/MyPackage/: CustomServMess.h  CustomServMessRequest.h  CustomServMessResponse.h
devel/lib/pkgconfig/: MyPackage.pc  topics_pkg.pc
devel/lib/python3/dist-packages/MyPackage/: __init__.py
devel/lib/python3/dist-packages/MyPackage/srv/: _CustomServMess.py  __init__.py
devel/share/MyPackage/cmake/: MyPackage-msg-extras.cmake  MyPackage-msg-paths.cmake  MyPackageConfig-version.cmake  MyPackageConfig.cmake
devel/share/gennodejs/ros/MyPackage/: _index.js
devel/share/roseus/ros/MyPackage/: manifest.l
devel/share/topics_pkg/cmake/: topics_pkgConfig-version.cmake  topics_pkgConfig.cmake
husky_move/: CMakeLists.txt  package.xml
husky_move/launch/: start_triangle.launch
husky_move/src/: Move_husky.py
husky_move/srv/: MoveHusky.srv
logs/MyPackage/: build.check.003.log.stderr  build.check.004.log.stderr  build.make.004.log.stderr
logs/topics_pkg/: build.check.004.log.stderr  build.check.005.log.stderr
scripts/: wall_avoider.py
services_pkg/: CMakeLists.txt  package.xml
src/MyPackage/: CMakeLists.txt
src/topics_pkg/: package.xml
src/topics_pkg/src/: simple_topic_publisher.py  simple_topic_subscriber.py
test_pkg/: CMakeLists.txt  package.xml
test_server/: CMakeLists.txt  package.xml
test_server/action/: Barosanii.action
test_server/scripts/: Barosanii_server.py
(+15 files in other folders)
